# iocinfo

./: LICENSE  README.md  pyproject.toml
iocinfo/: LICENSE  README.md  main.py
iocinfo/iocinfo/: __init__.py  main.py
